# simplex

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  logger.h  main.cpp  parser.cpp  parser.h  parser_s.cpp  presolve.cpp  presolve.h  simplex.cpp  simplex.h  utils.h
VisualStudioSln/Simplex/: Simplex.sln  Simplex.vcxproj  Simplex.vcxproj.filters
data/: air02.mps  example1.mps  flow1.lp  gen_kleeminty.py  klee-minty-n10.lp  klee-minty.lp  sched.lp  sched1.lp  test.lp  test1.lp  test_bnds_1.lp  test_presolve_2.lp  unbounded.lp
data/test_set_1/: flow_1.lp  sched.lp  sched_1.lp  sched_2.lp  test.lp  test_2.lp  test_init_basis.lp  test_presolve_1.lp
doc/: doc.tex
include/: INFO
src/: Basis.cpp  Basis.h  InitialBasis.cpp  InitialBasis.h  LinearProgram.cpp  LinearProgram.h  Makefile  Parser.cpp  Parser.h  Presolve.cpp  Simplex.cpp  Simplex.h  Utils.h  main.cpp  parser.cpp  simplex.cpp  simplex.h
tests/: UnitTests.cpp  test.py  utils.py
